<resources>
    <string name="app_name">openboxes</string>
    <string name="version">Version: 1.0.1</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="authenticate">Authenticate</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="approve">Approve</string>
    <string name="login">Login</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_username_password">Invalid username or password.</string>
    <string name="no_basic_setting">Unable to download basic settings from server.</string>
    <string name="error_same_oldnew_password">New password can not be the same as old password.</string>
    <string name="error_password_confirmation">Password confirmation do not match new password</string>
    <string name="error">Error</string>
    <string name="success">Sucess</string>
    <string name="info">Info</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Name</string>
    <string name="customer_name">Name: </string>
    <string name="father_name">Father Name</string>
    <string name="grandfather_name">Grandfather Name</string>
    <string name="language_code">Language Code</string>
    <string name="kebele_id">Kebele ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="gote">Gote</string>
    <string name="kebele">Kebele</string>
    <string name="photo">Capture Photo</string>
    <string name="status">Status</string>
    <string name="voucher">Voucher</string>
    <string name="date_issued">Date Issued</string>
    <string name="farmLandInformation">Farm Land Information</string>
    <string name="addButton">+</string>
    <string name="remove">-</string>
    <string name="land_size">Land Size (Hectar)</string>
    <string name="crop_type">Crop Type</string>
    <string name="grid_id">Grid ID</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="title_activity_enrollment">Enrollment</string>
    <string name="enroll_customer">Enroll</string>
    <string name="title_activity_customerlist">Customer List</string>
    <string name="title_activity_customersubmenu">Customer Menu</string>
    <string name="customer_list">Customer List</string>
    <string name="enroll_date">Enroll date: </string>
    <string name="language_amharic">Amharic</string>
    <string name="language_oromoiffa">Oromoiffa</string>
    <string name="language_tigirigna">Tigirigna</string>
    <string name="status_active">Active</string>
    <string name="status_inactive">Inactive</string>
    <string name="saved_successfully">Saved successfully.</string>
    <string name="save_failed">Failed to saved.</string>
    <string name="write_successfully">Successfully write to NFC tag.</string>
    <string name="write_failed">Failed to write to NFC tag.</string>
    <string name="crop_teff">Teff</string>
    <string name="crop_corn">Corn</string>
    <string name="crop_barley">Barley</string>
    <string name="nothing_to_display">Nothing to display</string>
    <string name="title_activity_commodity">Input</string>
    <string name="commodity">Input</string>
    <string name="commodity_name">Input Name</string>
    <string name="commodity_code">Code</string>
    <string name="measurement_unit">Measurement Unit</string>
    <string name="current_price">Current Price</string>
    <string name="price_effective_date">Effective From</string>
    <string name="commodity_list">Input List</string>
    <string name="unit_kg">Kg.</string>
    <string name="unit_liter">Ltr.</string>
    <string name="tab">\u0009\u0009\u0009</string>
    <string name="new_line">\n</string>
    <string name="colon_space">: </string>
    <string name="comma">,</string>
    <string name="double_line">\n\n</string>
    <string name="price_history">Price History</string>
    <string name="no_price_history">There is no price history for the input.</string>
    <string name="customer_options">Options</string>
    <string name="write_to_nfc">Write to NFC tag?</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="total_price">Total Price: </string>
    <string name="currency_birr">Birr</string>
    <string name="add_item">Add Item</string>
    <string name="save">Save</string>
    <string name="title_activity_entitlement">Entitlement</string>
    <string name="entitlement">Entitlement</string>
    <string name="title_activity_nfc">NFC Activity</string>
    <string name="nfc_read_write">NFC Read/Write</string>
    <string name="please_wait">Please wait ...</string>
    <string name="write_nfc">Write to NFC</string>
    <string name="read_nfc">Read NFC</string>
    <string name="cancel">Cancel</string>
    <string name="share_price_setting">Share Price Setting</string>
    <string name="no_valid_price_setting">No valid price setting.</string>
    <string name="commodity_not_found">There is no registered input.</string>
    <string name="continue_redemption">Continue</string>
    <string name="customer">Customer</string>
    <string name="entitle_customer">Customer Entitlement</string>
    <string name="entitle_customer_detail">Record entitlement for a customer</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="edit_customer_detail">Edit Customer Detail</string>
    <string name="entitled_commodities">Entitled Inputs</string>
    <string name="entitled_commodities_detail">List of entitled inputs</string>
    <string name="inputs_tobe_sold_detail">List of inputs to be sold</string>
    <string name="commodities_price">List of input prices</string>
    <string name="vouchers">Vouchers</string>
    <string name="vouchers_detail">List of issued vouchers</string>
    <string name="no_entitled_commodity">No Entitled Input</string>
    <string name="generated_date">Generated date</string>
    <string name="issue_date">Issue date</string>
    <string name="exp_date">Exp. Date</string>
    <string name="backup_db">Backup Database</string>
    <string name="updated_date">Updated date</string>
    <string name="redemption">Redemption</string>
    <string name="full_redemption">Full Redemption</string>
    <string name="full_redemption_detail">Redeem voucher fully</string>
    <string name="parial_redemption">Partial Redemption</string>
    <string name="parial_redemption_detail">Redeem voucher partially</string>
    <string name="confirm_redemption">Are you sure you want to redeem voucher? </string>
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>
    <string name="write_notice">Please tap on to the NFC tag to write on the tag.</string>
    <string name="read_notice">Please tap on to the NFC tag to read from the tag.</string>
    <string name="read_card">Please read the card first.</string>
    <string name="select_input">Please select inputs to redeem.</string>
    <string name="next">Next</string>
    <string name="ok">Ok</string>
    <string name="utilities">Utilities</string>
    <string name="sample_content">Sample Content</string>
    <string name="empty_card_content">Empty/Invalid card content.</string>
    <string name="empty_entitlement">Entitlement list can not be empty.</string>
    <string name="empty_sold_commodity_list">Sold input list can not be empty.</string>
    <string name="search">Search</string>
    <string name="price_setting">Price Setting</string>
    <string name="input_price_list">Input Price List</string>
    <string name="sync_price_setting">Sync Price Setting</string>
    <string name="abc">Abc</string>
    <string name="logout">Logout</string>
    <string name="lock_unlock">Lock/Unlock</string>
    <string name="sync">Sync</string>
    <string name="about">About</string>
    <string name="about_detail">Electronic voucher management system. </string>
    <string name="feature_not_implemented">Feature not implemented.</string>
    <string name="cashier_approval">Cashier Approval</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="sales_mode">Sales Mode</string>
    <string name="payment_mode_cash">Cash</string>
    <string name="payment_mode_loan">Credit</string>
    <string name="payment_mode_hybrid">Cash / Credit </string>
    <string name="loan_down_payment">Credit Down Payment</string>
    <string name="loan_repayment">Credit Repayment</string>
    <string name="loan_repayment_detail">Credit Repayment</string>
    <string name="loan_product_name">Credit Product Name</string>
    <string name="loan_amount_total">Total Credit Amount</string>
    <string name="loan_date">Date</string>
    <string name="loan_remaining_amount">Remaining Amount</string>
    <string name="loan_interest">Interest Amount</string>
    <string name="loan_charge">Charge Amount</string>
    <string name="loan_balance">Credit Balance</string>
    <string name="loan_balance_total">Total Credit Balance</string>
    <string name="loan_repayment_amount">Repayment Amount</string>
    <string name="loan_charge_amount">Credit Charge Amount</string>
    <string name="loan_transaction_list">Loan Transaction</string>
    <string name="loan_transaction">Credit Transaction</string>
    <string name="default_currency_amount">0.00</string>
    <string name="loan_montly_repayment_amount">Monthly Repayment Amount</string>
    <string name="loan_unknown_credit_logic">Used credit logic is not known. It should either be simple or compound. </string>
    <string name="loan_fully_paid">Loan is fully paid</string>
    <string name="repayment_list">Loan Repayment</string>
    <string name="no_repayment">Repayment is not made to this loan transaction. </string>
    <string name="sync_all">Sync All</string>
    <string name="upload_all">Upload All</string>
    <string name="auto_sync">Auto Sync</string>
    <string name="sync_data">Sync Data</string>
    <string name="phone_detail">Phone Detail</string>
    <string name="no_unpaid_loan_balance">There is no unpaid credit balance. Please sync credit balance first.</string>
    <string name="price_not_configured">Commodity price is not configured </string>
    <string name="voucher_status">Voucher Status</string>
    <string name="report">Report</string>
    <string name="commission_viewer">Commission Viewer</string>
    <string name="expiry_date">Expiry date</string>
    <string name="received">Received</string>
    <string name="issued">Issued</string>
    <string name="facility">Facility</string>
    <string name="loss_adjustment">Loss/Adjustment</string>
    <string name="loss">Loss</string>
    <string name="adjustment">Adjustment</string>
    <string name="quantity_on_hand">Quantity on hand</string>
    <string name="product">Product</string>
    <string name="receive_form">Receive Form</string>
    <string name="issue_form">Issue Form</string>
    <string name="remark">Remark</string>
    <string name="receiving_facility">Receiving Facility</string>
    <string name="available_item">Available Item</string>
    <string name="lot_number">Lot Number</string>
    <string name="issued_quantity">Issued Quantity</string>
    <string name="shipment_type">Shipment Type</string>
</resources>