<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:id="@+id/svBinCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/viewerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/received"
                    android:textAppearance="?android:attr/textAppearanceLarge" />


                <View
                    android:layout_width="fill_parent"
                    android:layout_height="5sp"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity" />

                <EditText
                    android:id="@+id/etReceivedQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/issued"
                    android:textAppearance="?android:attr/textAppearanceLarge" />


                <View
                    android:layout_width="fill_parent"
                    android:layout_height="5sp"
                    android:background="@color/colorPrimaryDark" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/facility" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></Spinner>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity" />

                <EditText
                    android:id="@+id/etIssuedQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/loss_adjustment"
                    android:textAppearance="?android:attr/textAppearanceLarge" />


                <View
                    android:layout_width="fill_parent"
                    android:layout_height="5sp"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loss" />

                <EditText
                    android:id="@+id/etLoss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adjustment" />

                <EditText
                    android:id="@+id/etAdjustment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity_on_hand" />

                <EditText
                    android:id="@+id/etQuantityOnhand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false" />


            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/svBinCard"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:fontFamily="Noto Sans Ethiopic"
            android:text="@string/save"
            android:textColor="@color/ui_white"
            android:textSize="22dp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>
