<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/btnSave">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@android:drawable/dialog_holo_light_frame">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/receive_form" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2sp"
                    android:background="@color/colorPrimaryDark"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/facility"/>
                <Spinner
                    android:id="@+id/spIssuingFacilities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/lblReceivedQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"/>
                <EditText
                    android:id="@+id/etReceivedQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/default_currency_amount"/>

                <TextView
                    android:id="@+id/lblReceiveRemark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/remark"/>
                <EditText
                    android:id="@+id/etReceiveRemark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@android:drawable/dialog_holo_light_frame">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/issue_form" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2sp"
                    android:background="@color/colorPrimaryDark"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/facility"/>
                <Spinner
                    android:id="@+id/spReceivingFacilities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/lblIssuedQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"/>
                <EditText
                    android:id="@+id/etIssuedQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/default_currency_amount"/>

                <TextView
                    android:id="@+id/lblIssueRemark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/remark"/>
                <EditText
                    android:id="@+id/etIssueRemark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@android:drawable/dialog_holo_light_frame">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/loss_adjustment" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2sp"
                    android:background="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/lblLossQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loss"/>
                <EditText
                    android:id="@+id/etLossQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/default_currency_amount"/>

                <TextView
                    android:id="@+id/lblAdjustementQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adjustment"/>
                <EditText
                    android:id="@+id/etAdjustementQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/default_currency_amount"/>


                <TextView
                    android:id="@+id/lblOnHandQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity_on_hand"/>
                <EditText
                    android:id="@+id/etOnHandQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/default_currency_amount"/>

            </LinearLayout>




        </LinearLayout>


    </ScrollView>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/save"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:textColor="@color/ui_white"
        android:textSize="22dp"
        android:fontFamily="Noto Sans Ethiopic"/>
</RelativeLayout>